--- a/YJ/YJ/Main/Classes/Login/LoginViewController.xib
+++ b/YJ/YJ/Main/Classes/Login/LoginViewController.xib
@@ -42,19 +42,19 @@
                             </constraints>
                         </view>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_login_phone" translatesAutoresizingMaskIntoConstraints="NO" id="mZe-3c-xtX">
-                            <rect key="frame" x="23" y="18" width="18" height="18"/>
+                            <rect key="frame" x="0.0" y="18" width="18" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="18" id="shz-nJ-sWB"/>
                                 <constraint firstAttribute="width" constant="18" id="xwl-ij-jIY"/>
                             </constraints>
                         </imageView>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Cy-xr-Ahc">
-                            <rect key="frame" x="53" y="-3" width="307" height="60"/>
+                            <rect key="frame" x="30" y="-3" width="330" height="60"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="60" id="yND-q5-JYK"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -62,7 +62,7 @@
                         <constraint firstItem="AMu-T2-zva" firstAttribute="leading" secondItem="lIH-KN-JYa" secondAttribute="leading" id="6ZG-17-xBQ"/>
                         <constraint firstItem="4Cy-xr-Ahc" firstAttribute="centerY" secondItem="lIH-KN-JYa" secondAttribute="centerY" id="8Uy-EI-ERI"/>
                         <constraint firstItem="4Cy-xr-Ahc" firstAttribute="leading" secondItem="mZe-3c-xtX" secondAttribute="trailing" constant="12" id="8fu-dV-arc"/>
-                        <constraint firstItem="mZe-3c-xtX" firstAttribute="leading" secondItem="lIH-KN-JYa" secondAttribute="leading" constant="23" id="IVu-Y1-V1U"/>
+                        <constraint firstItem="mZe-3c-xtX" firstAttribute="leading" secondItem="lIH-KN-JYa" secondAttribute="leading" id="IVu-Y1-V1U"/>
                         <constraint firstAttribute="bottom" secondItem="AMu-T2-zva" secondAttribute="bottom" id="LHY-CW-vR4"/>
                         <constraint firstItem="mZe-3c-xtX" firstAttribute="centerY" secondItem="lIH-KN-JYa" secondAttribute="centerY" id="nUA-th-cU1"/>
                         <constraint firstAttribute="trailing" secondItem="AMu-T2-zva" secondAttribute="trailing" id="pb8-DC-iAu"/>
@@ -92,19 +92,19 @@
                             </constraints>
                         </view>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_login_code" translatesAutoresizingMaskIntoConstraints="NO" id="WV6-tC-OaZ">
-                            <rect key="frame" x="23" y="18" width="18" height="18"/>
+                            <rect key="frame" x="0.0" y="18" width="18" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="18" id="2CM-M2-weI"/>
                                 <constraint firstAttribute="height" constant="18" id="hZQ-Jo-AAX"/>
                             </constraints>
                         </imageView>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oKr-Of-8KC">
-                            <rect key="frame" x="53" y="-3" width="214" height="60"/>
+                            <rect key="frame" x="30" y="-3" width="237" height="60"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="60" id="M3Y-Jy-RCq"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gNL-8J-JoS">
                             <rect key="frame" x="283" y="2" width="77" height="50"/>
