--- a/YJ/YJ/Main/Classes/Login/LoginViewController.xib
+++ b/YJ/YJ/Main/Classes/Login/LoginViewController.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -114,7 +113,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <state key="normal" title="获取验证码">
-                                <color key="titleColor" name="AccentColor"/>
+                                <color key="titleColor" red="0.35686274509803922" green="0.60392156862745094" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="codeBtnOnClick:" destination="-1" eventType="touchUpInside" id="pnS-pm-Ae3"/>
@@ -137,7 +136,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="9lA-Og-JdZ"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="ezF-rz-TNA" firstAttribute="top" secondItem="lIH-KN-JYa" secondAttribute="bottom" id="94D-KO-RZk"/>
                 <constraint firstItem="ezF-rz-TNA" firstAttribute="height" secondItem="lIH-KN-JYa" secondAttribute="height" id="BeT-9a-sJU"/>
@@ -162,9 +161,6 @@
         <image name="icon_login" width="104" height="104"/>
         <image name="icon_login_code" width="18" height="18"/>
         <image name="icon_login_phone" width="18" height="18"/>
-        <namedColor name="AccentColor">
-            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
