--- a/YJ/YJ/Main/Classes/UserCenter/View/UserCenterHeaderView.xib
+++ b/YJ/YJ/Main/Classes/UserCenter/View/UserCenterHeaderView.xib
@@ -8,7 +8,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner">
+            <connections>
+                <outlet property="headImgView" destination="Meh-gN-fVJ" id="SPw-l8-10F"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UserCenterHeaderView">
             <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
@@ -55,6 +59,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="headImgView" destination="Meh-gN-fVJ" id="ZYS-ho-ch0"/>
                 <outlet property="subTitle" destination="Mtq-77-SNv" id="6Cl-sa-1XU"/>
                 <outlet property="titleLabel" destination="RLt-Qb-XdJ" id="Wf2-na-zlQ"/>
             </connections>
