--- a/YJ/YJ/Main/Classes/UserCenter/View/UserCenterHeaderView.xib
+++ b/YJ/YJ/Main/Classes/UserCenter/View/UserCenterHeaderView.xib
@@ -8,11 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner">
-            <connections>
-                <outlet property="headImgView" destination="Meh-gN-fVJ" id="SPw-l8-10F"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UserCenterHeaderView">
             <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
@@ -22,15 +18,19 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="251" image="icon_login" translatesAutoresizingMaskIntoConstraints="NO" id="Meh-gN-fVJ">
-                            <rect key="frame" x="15" y="23" width="104" height="104"/>
+                            <rect key="frame" x="15" y="30" width="90" height="90"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="90" id="9su-ov-CS3"/>
+                                <constraint firstAttribute="width" constant="90" id="pQg-WU-nds"/>
+                            </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLt-Qb-XdJ">
-                            <rect key="frame" x="129" y="43" width="270" height="27"/>
+                            <rect key="frame" x="115" y="50" width="284" height="27"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3333" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mtq-77-SNv">
-                            <rect key="frame" x="129" y="80" width="270" height="19.5"/>
+                            <rect key="frame" x="115" y="87" width="284" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -59,7 +59,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="headImgView" destination="Meh-gN-fVJ" id="ZYS-ho-ch0"/>
+                <outlet property="headImgView" destination="Meh-gN-fVJ" id="osC-rf-mk4"/>
                 <outlet property="subTitle" destination="Mtq-77-SNv" id="6Cl-sa-1XU"/>
                 <outlet property="titleLabel" destination="RLt-Qb-XdJ" id="Wf2-na-zlQ"/>
             </connections>
